--- a/proglangs.css
+++ b/proglangs.css
@@ -1,3 +1,38 @@
+ body {
+    padding-left: 11em;
+    font-size: 18px;
+    font-family: Garamond, "Times New Roman",
+          Times, serif;
+    color: orange;
+    background-color: #222222}
+  ul.navbar {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    position: absolute;
+    top: 2em;
+    left: 1em;
+    width: 9em }
+  h1 {
+    font-family: Helvetica, Geneva, Arial,
+          SunSans-Regular, sans-serif }
+  ul.navbar li {
+    background: white;
+    margin: 0.5em 0;
+    padding: 0.3em;
+    border-right: 1em solid orange }
+  ul.navbar a {
+    text-decoration: none }
+  a:link {
+    color: blue }
+  a:visited {
+    color: purple }
+  address {
+    margin-top: 1em;
+    padding-top: 1em;
+    border-top: thin dotted }
+
+
 #top_5 {
 	color: purple;
 }
@@ -23,7 +58,8 @@
 	color: blue;
 }
 
-.listestil {
+#listestil {
+	color: gray;
 	list-style-type: none;
-	text-align: center;
+	text-align: left;
 }
