--- a/lab3/css/lab3.css
+++ b/lab3/css/lab3.css
@@ -2,3 +2,17 @@
 	color: orange;
 	font-size: 2em;
 }
+
+.horisontal {
+	color: blue;
+	font-weight:bold;
+}
+
+.vertikal {
+	color: purple;
+	font-weight:bold;
+}
+
+.my_canvas {
+	border: solid black;
+}
